// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecurringRunDetails renders a recurring run with cron schedule 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <DetailsTable
      fields={
        Array [
          Array [
            "",
            "test job description",
          ],
          Array [
            "",
            "9/5/2018, 4:03:02 AM",
          ],
        ]
      }
      title=""
    />
    <DetailsTable
      fields={
        Array [
          Array [
            "",
            "Yes",
          ],
          Array [
            "",
            "* * * 0 0 !",
          ],
          Array [
            "",
            "50",
          ],
          Array [
            "",
            "true",
          ],
          Array [
            "",
            "10/8/2018, 7:06:00 AM",
          ],
          Array [
            "",
            "11/9/2018, 8:07:06 AM",
          ],
        ]
      }
      title=""
    />
    <DetailsTable
      fields={
        Array [
          Array [
            "param1",
            "value1",
          ],
        ]
      }
      title=""
    />
  </div>
</div>
`;

exports[`RecurringRunDetails renders a recurring run with periodic schedule 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <DetailsTable
      fields={
        Array [
          Array [
            "",
            "test job description",
          ],
          Array [
            "",
            "9/5/2018, 4:03:02 AM",
          ],
        ]
      }
      title=""
    />
    <DetailsTable
      fields={
        Array [
          Array [
            "",
            "Yes",
          ],
          Array [
            "",
            "Every 1 hours",
          ],
          Array [
            "",
            "50",
          ],
          Array [
            "",
            "false",
          ],
          Array [
            "",
            "10/8/2018, 7:06:00 AM",
          ],
          Array [
            "",
            "11/9/2018, 8:07:06 AM",
          ],
        ]
      }
      title=""
    />
    <DetailsTable
      fields={
        Array [
          Array [
            "param1",
            "value1",
          ],
        ]
      }
      title=""
    />
  </div>
</div>
`;
